finished Navbar functionaility

--- a/client/Kelp/src/app/components/navbar/navbar.component.html
+++ b/client/Kelp/src/app/components/navbar/navbar.component.html
@@ -7,7 +7,7 @@
   <span class="example-spacer"></span>
   <button class="nav-button" mat-flat-button color="primary">
     <i class="fas fa-fish"></i>
-    <span>Aquariums</span>
+    <span class="redirect" routerLink="/aquariums">Aquariums</span>
   </button>
 
   <button
