--- a/client/Kelp/src/app/components/navbar/navbar.component.html
+++ b/client/Kelp/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar style="background-color: #0673ef;">
   <button class="nav-button" mat-flat-button style="background-color: #0673ef;" color="primary">
     <i class="fas fa-leaf"></i>
-    <span class="redirect" routerLink="">Kelp2</span>
+    <span class="redirect" routerLink="">Kelp</span>
   </button>
 
   <span class="example-spacer"></span>
