start of JWT implementation

--- a/client/Kelp/src/app/components/dashboard/dashboard.component.html
+++ b/client/Kelp/src/app/components/dashboard/dashboard.component.html
@@ -1,1 +1,40 @@
-<p>dashboard works!</p>
+<div class="home-bg">
+  <div class="background1"></div>
+  <div class="hero-text" data-aos="fade-up">
+    <h2 id="dashbanner">Welcome Aquarist!</h2>
+    <div class="btn-group" role="group" aria-label="Basic example">
+      <div class="col">
+        <button id="btn1" type="button" class="btn btn-primary">
+          <i class="fas fa-user-circle"></i>
+          Edit Profile
+        </button>
+        <br />
+        <button id="btn2" type="button" class="btn btn-primary">
+          <i class="fas fa-user-circle"></i>
+          View Profile
+        </button>
+        <button id="btn3" type="button" class="btn btn-primary">
+          <i class="fas fa-fish"></i>
+          <span class="redirect" routerLink="/aquariums">View Aquariums</span>
+        </button>
+      </div>
+    </div>
+  </div>
+
+  <div class="rate center" data-aos="fade-right">
+    <i class="HLIcons fas fa-fish"></i>
+    <p class="HLText">
+      Been to an aquarium that you love? Tired of aquariums not labeling their
+      fish? Let the world know!
+    </p>
+  </div>
+
+  <div class="diagonal-one"></div>
+
+  <div class="discover center" data-aos="fade-left">
+    <i class="HLIcons fas fa-frog"></i>
+    <p class="HLText">
+      Read what others have written and find your next favorite aquarium!
+    </p>
+  </div>
+</div>
