--- a/client/Kelp/src/app/components/home/home.component.html
+++ b/client/Kelp/src/app/components/home/home.component.html
@@ -1,34 +1,31 @@
-<div class='home-bg'>
-
-    <div class='background1'></div>
-    <div class='hero-text' data-aos='fade-up'>
-      Kelp
-      <div class='hero-subtext'>The Ultimate Aquarium Review Site</div>
-    </div>
-
-    <div class='rate center' data-aos='fade-right'>
-      <i class='HLIcons fas fa-fish'></i>
-      <p class='HLText'>
-        Been to an aquarium that you love? Tired of aquariums not labeling
-        their fish? Let the world know!
-      </p>
-    </div>
-
-    <div class='diagonal-one'></div>
-
-    <div class='discover center' data-aos='fade-left'>
-      <i class='HLIcons fas fa-frog'></i>
-      <p class='HLText'>
-        Read what others have written and find your next favorite aquarium!
-      </p>
-    </div>
-
-    <div class='diagonal-two'></div>
-
-    <div class='create center' data-aos='fade-right'>
-      <i class='HLIcons fas fa-leaf'></i>
-      <p class='HLText'>
-        The magic begins after a very quick account creation.
-      </p>
-    </div>
+<div class="home-bg">
+  <div class="background1"></div>
+  <div class="hero-text" data-aos="fade-up">
+    Kelp
+    <div class="hero-subtext">The Ultimate Aquarium Review Site</div>
   </div>
+
+  <div class="rate center" data-aos="fade-right">
+    <i class="HLIcons fas fa-fish"></i>
+    <p class="HLText">
+      Been to an aquarium that you love? Tired of aquariums not labeling their
+      fish? Let the world know!
+    </p>
+  </div>
+
+  <div class="diagonal-one"></div>
+
+  <div class="discover center" data-aos="fade-left">
+    <i class="HLIcons fas fa-frog"></i>
+    <p class="HLText">
+      Read what others have written and find your next favorite aquarium!
+    </p>
+  </div>
+
+  <div class="diagonal-two"></div>
+
+  <div class="create center" data-aos="fade-right">
+    <i class="HLIcons fas fa-leaf"></i>
+    <p class="HLText">The magic begins after a very quick account creation.</p>
+  </div>
+</div>
