view aquariums page, view aquarium, add Review and some css added

--- a/client/Kelp/src/app/components/search-bar/search-bar.component.html
+++ b/client/Kelp/src/app/components/search-bar/search-bar.component.html
@@ -1,1 +1,7 @@
-<p>search-bar works!</p>
+<!-- <div fxLayout="column" fxFlexAlign="center">
+    <input type="text" #bookSearchInput class="form-control search-bar mb-4" placeholder="Name of Aquarium" />
+    <div class="no-results" *ngIf="!aquariums">
+        <p>No Aquariums found! Please try again or </p>
+        <button class="width mb-4" routerLink="/add-aquarium">Add Aquarium</button>
+    </div>
+</div> -->
