--- a/client/Kelp/src/app/components/aquariums/aquariums.component.html
+++ b/client/Kelp/src/app/components/aquariums/aquariums.component.html
@@ -1,3 +1,33 @@
-<p>aquariums works!</p>
+<div class="page" fxLayout="column">
+    <div fxFlexAlign="center" fxLayout="row">
+        <h1 class="page-title mt-5">Aquariums</h1>
+    </div>
+    <div fxFlexAlign="center">
+    
+        <input type="text" #aquaSearchInput class="form-control search-bar" placeholder="Search for an Aquarium" />
+    </div>
+    <div fxLayout="row" fxFlexAlign="center" fxLayoutGap="20px">
+        <div fxLayout="column" fxFlex="18">
+            <div class="loading" *ngIf="isLoading">
+                <img src="../../../assets/Images/fishSpinner .gif" alt="Loading..." class="fish-spinner">
+            </div>
+            <button class="width btn-primary mt-4" (click)="browse()" >Browse</button>
 
-<button routerLink="/add-aquarium">Add Aquarium</button>
+        </div>
+    
+    </div>
+    <div class="no-results" *ngIf="noRes">
+        <p>No Aquariums found! Please try again or </p>
+        <button class="width mb-4" routerLink="/add-aquarium">Add Aquarium</button>
+        
+    </div>
+    <div class="content " *ngIf="aquariums">
+        <div class="flex" fxLayoutGap="20px">
+            <div *ngFor="let aquarium of aquariums">
+                <app-aquarium-panel [aquarium] = aquarium></app-aquarium-panel>
+            </div>
+        </div>
+    </div>
+
+</div>
+
