JWT authentication implementation

--- a/client/Kelp/src/app/components/sign-up/sign-up.component.html
+++ b/client/Kelp/src/app/components/sign-up/sign-up.component.html
@@ -10,7 +10,7 @@
         <input type="password" [(ngModel)]="password" required minlength="6" placeholder="Password"
         />
         <br/>
-        <input type="text" [(ngModel)]="displayName" required minlength="4" placeholder="Display Name">
+        <input type="text" [(ngModel)]="userName" required minlength="4" placeholder="Display Name">
         <br/>
         <input type="url" [(ngModel)]="photo" required minlength="8" placeholder="Photo URL">
         <br/>
