--- a/client/Kelp/src/app/components/sign-in/sign-in.component.html
+++ b/client/Kelp/src/app/components/sign-in/sign-in.component.html
@@ -15,13 +15,11 @@
       <div class="formGroup">
         <!-- user click this button to login -->
         <button
-          class="nav-button"
+          class="nav-button redirect"
           mat-flat-button
           color="primary"
           (click)="login()"
-          [disabled]="!email || !password"
-          class="redirect"
-          routerLink=""
+          [disabled]="!email || !password"  
         >
           <span>Login</span>
         </button>
