--- a/client/Kelp/src/app/components/navbar/navbar.component.html
+++ b/client/Kelp/src/app/components/navbar/navbar.component.html
@@ -1,47 +1,71 @@
-<mat-toolbar style="background-color: #0673ef;">
-  <button class="nav-button" mat-flat-button style="background-color: #0673ef;" color="primary">
-    <i class="fas fa-leaf"></i>
-    <span class="redirect" routerLink="">Kelp</span>
+<mat-toolbar style="background-color: #0673ef">
+  <button
+    class="nav-button"
+    mat-flat-button
+    style="background-color: #0673ef"
+    color="primary"
+  >
+    <span class="redirect" routerLink=""><i class="fas fa-leaf"></i>Kelp</span>
   </button>
 
   <span class="example-spacer"></span>
-  <button *ngIf="(firebaseService.user | async)" class="nav-button" mat-flat-button  style="background-color: #0673ef;" color="primary">
-    <i class="fas fa-anchor"></i>
-    <span class="redirect" routerLink="/dashboard">Dashboard</span>
+  <button
+    *ngIf="firebaseService.user | async"
+    class="nav-button"
+    mat-flat-button
+    style="background-color: #0673ef"
+    color="primary"
+  >
+    <span class="redirect" routerLink="/dashboard">
+      <i class="fas fa-anchor"></i>Dashboard</span
+    >
   </button>
 
-
-  <button class="nav-button" mat-flat-button  style="background-color: #0673ef;" color="primary">
-    <i class="fas fa-fish"></i>
-    <span class="redirect" routerLink="/aquariums">Aquariums</span>
+  <button
+    class="nav-button"
+    mat-flat-button
+    style="background-color: #0673ef"
+    color="primary"
+  >
+    <span class="redirect" routerLink="/aquariums">
+      <i class="fas fa-fish"></i>Aquariums</span
+    >
   </button>
 
   <button
     *ngIf="!(firebaseService.user | async)"
     class="nav-button"
     mat-flat-button
-    style="background-color: #0673ef;"
+    style="background-color: #0673ef"
     color="primary"
   >
-    <i class="far fa-user-circle"></i>
-    <span class="redirect" routerLink="/sign-up">Register</span>
+    <span class="redirect" routerLink="/sign-up"
+      ><i class="far fa-user-circle"></i>Register</span
+    >
   </button>
 
   <button
     *ngIf="!(firebaseService.user | async)"
     class="nav-button"
     mat-flat-button
-    style="background-color: #0673ef;"
+    style="background-color: #0673ef"
     color="primary"
   >
-    <i class="fas fa-sign-in-alt"></i>
-    <span class="redirect" routerLink="/sign-in">Login</span>
+    <span class="redirect" routerLink="/sign-in"
+      ><i class="fas fa-sign-in-alt"></i>Login</span
+    >
   </button>
 
-  <button (click)="logout()" *ngIf="firebaseService.user | async"  class="nav-button"
-  mat-flat-button
-  style="background-color: #0673ef;" color="primary">
-  <i class="fas fa-sign-out-alt"></i>
-  <span class="redirect" routerLink="">Logout</span>
+  <button
+    (click)="logout()"
+    *ngIf="firebaseService.user | async"
+    class="nav-button"
+    mat-flat-button
+    style="background-color: #0673ef"
+    color="primary"
+  >
+    <span class="redirect" routerLink=""
+      ><i class="fas fa-sign-out-alt"></i>Logout</span
+    >
   </button>
 </mat-toolbar>
