--- a/client/Kelp/src/app/components/dashboard/dashboard.component.html
+++ b/client/Kelp/src/app/components/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="home-bg">
   <div class="background1"></div>
   <div class="hero-text" data-aos="fade-up">
-    <h2 id="dashbanner">Welcome Aquarist!</h2>
+    <h2 id="dashbanner">Welcome {{this.user?.userName}}!</h2>
     <div class="btn-group" role="group" aria-label="Basic example">
       <div class="col">
         <button id="btn1" type="button" class="btn btn-primary">
