fixed everthing, finally

--- a/client/Kelp/src/app/components/sign-up/sign-up.component.html
+++ b/client/Kelp/src/app/components/sign-up/sign-up.component.html
@@ -1,40 +1,67 @@
 <div class="displayTable">
   <div class="displayTableCell">
-    <div class="authBlock container center ">
+    <div class="authBlock container center">
       <h3>Sign Up</h3>
 
-      <div class="formGroup ">
+      <div class="formGroup">
         <!-- these input fields takes email and password from user -->
-        <input type="email" [(ngModel)]="email" required  placeholder="Email" />
-        <br/>
-        <input type="password" [(ngModel)]="password" required minlength="6" placeholder="Password"
+        <input type="email" [(ngModel)]="email" required placeholder="Email" />
+        <br />
+        <input
+          type="password"
+          [(ngModel)]="password"
+          required
+          minlength="6"
+          placeholder="Password"
         />
-        <br/>
-        <input type="text" [(ngModel)]="userName" required minlength="4" placeholder="Display Name">
-        <br/>
-        <input type="url" [(ngModel)]="photo" required minlength="8" placeholder="Photo URL">
-        <br/>
-        <input type="text" [(ngModel)]="fishPersonality" required placeholder="Fish Personality">
-        <br/>
-        <input type="text" [(ngModel)]="location" required placeholder="location">
-        <br/>
-        <input type="text" [(ngModel)]="twitter" placeholder="Twitter">
-        <br/>
-        <input type="text" [(ngModel)]="facebook" placeholder="Facebook">
-        <br/>
-        <input type="text" [(ngModel)]="instagram" placeholder="Instagram">
-        <br/>
-        <textarea type="text" [(ngModel)]="bio" placeholder="bio" ></textarea>
-
+        <br />
+        <input
+          type="text"
+          [(ngModel)]="userName"
+          required
+          minlength="4"
+          placeholder="Display Name"
+        />
+        <br />
+        <input
+          type="url"
+          [(ngModel)]="photo"
+          required
+          minlength="8"
+          placeholder="Photo URL"
+        />
+        <br />
+        <input
+          type="text"
+          [(ngModel)]="fishPersonality"
+          required
+          placeholder="Fish Personality"
+        />
+        <br />
+        <input
+          type="text"
+          [(ngModel)]="location"
+          required
+          placeholder="location"
+        />
+        <br />
+        <input type="text" [(ngModel)]="twitter" placeholder="Twitter" />
+        <br />
+        <input type="text" [(ngModel)]="facebook" placeholder="Facebook" />
+        <br />
+        <input type="text" [(ngModel)]="instagram" placeholder="Instagram" />
+        <br />
+        <textarea type="text" [(ngModel)]="bio" placeholder="bio"></textarea>
       </div>
-      
+
       <button
-        class="nav-button"
+        class="nav-button redirect"
         mat-flat-button
         color="primary"
         (click)="signup()"
-        [disabled]="!email || !password ">
-        <span >Sign-up</span>
+        [disabled]="!email || !password"
+      >
+        <span>Sign-up</span>
       </button>
 
       <div class="formGroup">
@@ -42,9 +69,10 @@
       </div>
 
       <div class="redirectToLogin">
-        <span>Already have an account?
+        <span
+          >Already have an account?
           <button class="redirect" routerLink="/sign-in">Login</button>
-        </span>     
+        </span>
       </div>
     </div>
   </div>
