--- a/client/Kelp/src/app/components/navbar/navbar.component.html
+++ b/client/Kelp/src/app/components/navbar/navbar.component.html
@@ -10,7 +10,7 @@
 
   <span class="example-spacer"></span>
   <button
-    *ngIf="firebaseService.user | async"
+    *ngIf="ss.get('userInfo')"
     class="nav-button"
     mat-flat-button
     style="background-color: #0673ef"
@@ -33,7 +33,7 @@
   </button>
 
   <button
-    *ngIf="!(firebaseService.user | async)"
+    *ngIf="!(ss.get('userInfo'))"
     class="nav-button"
     mat-flat-button
     style="background-color: #0673ef"
@@ -45,7 +45,7 @@
   </button>
 
   <button
-    *ngIf="!(firebaseService.user | async)"
+    *ngIf="!(ss.get('userInfo'))"
     class="nav-button"
     mat-flat-button
     style="background-color: #0673ef"
@@ -58,7 +58,7 @@
 
   <button
     (click)="logout()"
-    *ngIf="firebaseService.user | async"
+    *ngIf="ss.get('userInfo')"
     class="nav-button"
     mat-flat-button
     style="background-color: #0673ef"
