--- a/client/Kelp/src/app/components/aquarium-page/aquarium-page.component.html
+++ b/client/Kelp/src/app/components/aquarium-page/aquarium-page.component.html
@@ -41,7 +41,7 @@
         </div>
         <div class="phone">{{aquarium?.phone}}</div>
         <a href="{{aquarium?.url}}" class="url">{{aquarium?.url}}</a>
-        <div class="address">{{aquarium?.street}} {{aquarium?.city}} {{aquarium?.postalCode}}</div>
+        <div class="address">{{aquarium?.address}}</div>
         <div class="description">{{aquarium?.description}}</div>
     </div>
     <button class="btn-primary add-review" (click)="addReview()" >Add Review</button>
