--- a/client/Kelp/src/app/components/aquarium-panel/aquarium-panel.component.html
+++ b/client/Kelp/src/app/components/aquarium-panel/aquarium-panel.component.html
@@ -10,8 +10,7 @@
             <mat-card-subtitle>{{aquarium?.url}}</mat-card-subtitle>
         </mat-card-header>
         <mat-card-content>
-            <div>City: {{aquarium?.city}}</div>
-            <div>Rating: {{aquarium?.rating}}</div>
+            <div>Address: {{aquarium?.address}}</div>
         </mat-card-content>
     </div>
 
