--- a/client/Kelp/src/app/components/comment-panel/comment-panel.component.html
+++ b/client/Kelp/src/app/components/comment-panel/comment-panel.component.html
@@ -4,7 +4,7 @@
     <div fxLayout="row">
         <div class="votes">
             <span class="arrow-up" (click)="arrowUp()"><i class="fas fa-arrow-up"></i></span> 
-            {{comment?.votes}} 
+            votes
             <span class="arrow-down" (click)="arrowDown()"><i class="fas fa-arrow-down"></i></span>
         </div>
         <button class="btn-comment btn-secondary" (click)="addReply()">Reply</button>
