--- a/client/Kelp/src/app/components/review-panel/review-panel.component.html
+++ b/client/Kelp/src/app/components/review-panel/review-panel.component.html
@@ -13,7 +13,7 @@
             <div fxLayout="row" class="comment-arrows">
                 <div class="votes">
                     <span class="arrow-up" (click)="arrowUp()"><i class="fas fa-arrow-up"></i></span> 
-                    {{review?.votes}} 
+                    votes 
                     <span class="arrow-down" (click)="arrowDown()"><i class="fas fa-arrow-down"></i></span>
                 </div>
                 <button class="btn-secondary btn-comment" (click)="addComment()">Comment</button>
