--- a/client/Kelp/src/app/components/navbar/navbar.component.html
+++ b/client/Kelp/src/app/components/navbar/navbar.component.html
@@ -64,7 +64,7 @@
     style="background-color: #0673ef"
     color="primary"
   >
-    <span class="redirect" routerLink=""
+    <span class="redirect" routerLink="/"
       ><i class="fas fa-sign-out-alt"></i>Logout</span
     >
   </button>
