--- a/client/Kelp/src/app/components/reauthenticate/reauthenticate.component.html
+++ b/client/Kelp/src/app/components/reauthenticate/reauthenticate.component.html
@@ -1,6 +1,7 @@
 <div class="displayTable">
   <div class="displayTableCell">
     <div class="authBlock">
+    <mat-card>
       <h3>Sign In</h3>
       <div class="formGroup">
         <!-- these input fields takes email and password from user -->
@@ -35,6 +36,7 @@
           </button></span
         >
       </div>
+    </mat-card>
     </div>
   </div>
 </div>
