--- a/client/Kelp/src/app/components/edit-profile/edit-profile.component.css
+++ b/client/Kelp/src/app/components/edit-profile/edit-profile.component.css
@@ -1,5 +1,5 @@
 mat-card {
-    margin-top: 100%;
+    margin-top: 25%;
     background-color: aliceblue;
     
 }
@@ -9,6 +9,14 @@ mat-card-content {
     display: flex;
     flex-flow: column wrap;
     align-items: flex-start;
+}
+
+h1 {
+    margin-top: 10%;
+    align-self: center;
+    font-size: xx-large;
+    color: black;
+    font-weight: 500;
 }
 
 .displayTable {
@@ -21,4 +29,3 @@ mat-card-content {
     background-repeat: no-repeat;
     background-size: cover;
 }
-
