--- a/client/Kelp/src/app/components/profile/profile.component.css
+++ b/client/Kelp/src/app/components/profile/profile.component.css
@@ -1,5 +1,15 @@
+#proPic {
+    image-rendering: optimizeQuality;
+    width: 25em;
+    height: 25em;
+    border-radius: 50%;
+    align-self: center;
+}
+
 mat-card {
-    margin-top: 100%;
+    display: flex;
+    flex-flow: column wrap;
+    margin-top: 25%;
     background-color: aliceblue;
     
 }
@@ -9,6 +19,14 @@ mat-card-content {
     display: flex;
     flex-flow: column wrap;
     align-items: flex-start;
+}
+
+h1 {
+    margin-top: 10%;
+    align-self: center;
+    font-size: xx-large;
+    color: black;
+    font-weight: 500;
 }
 
 .displayTable {
@@ -22,3 +40,7 @@ mat-card-content {
     background-size: cover;
 }
 
+#nav{
+    align-self: center;
+   
+}
