--- a/client/Kelp/src/app/components/sign-up/sign-up.component.css
+++ b/client/Kelp/src/app/components/sign-up/sign-up.component.css
@@ -1,22 +1,28 @@
-form {
-    position: relative;
-    width: 30em;
-    display: inline-block;
-    margin-top: 10%;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: left;
-    background-color: white;
-    border-radius: 2.5%;
+mat-card {
+    margin-top: 50%;
+    background-color: aliceblue;
+    
+}
+
+mat-card-content {
+    width: fit-content;
+    display: flex;
+    flex-flow: column wrap;
+    align-items: flex-start;
 }
 
 .displayTable {
-    height: 100%;
-    height: 100%;
-    position: relative;
-    display: block;
-    text-align: center; 
-    background-image: url(../../../assets/Images/ellicia-siwnJoMbCII-unsplash.jpg);
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+    width: 100%;
+    height: 95%;
+    background-image: url(../../../assets/Images/zachary-spears-DcweRpj62Ds-unsplash.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+form{
+    height: 600px;
+    overflow-y: auto;
 }
