--- a/client/Kelp/src/styles.css
+++ b/client/Kelp/src/styles.css
@@ -1,26 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
-
-html,
 body {
-  height: 100%;
-}
-body {
-  margin: 0;
+  margin: 0px;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
-html,
-body {
-  height: 100%;
-}
-body {
-  margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
-}
-
 button {
   color: white;
   background-color: #007bff;
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,body{
+  height: 100%;
+  width: 100%;
+}
