finally done I hope with JWTs

--- a/client/Kelp/src/app/components/reauthenticate/reauthenticate.component.html
+++ b/client/Kelp/src/app/components/reauthenticate/reauthenticate.component.html
@@ -7,6 +7,15 @@
         <!-- these input fields takes email and password from user -->
 
         <input
+          type="email"
+          [(ngModel)]="email"
+          placeholder="Enter email"
+        />
+      </div>
+      <div class="formGroup">
+        <!-- these input fields takes email and password from user -->
+
+        <input
           type="password"
           [(ngModel)]="password"
           placeholder="Enter password"
